<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/inline_preferences">

        <ListPreference
            android:key="text_color_preference"
            android:title="@string/title_color_preference"
            android:summary="@string/summary_color_preference"
            android:entries="@array/font_color_entries"
            android:entryValues="@array/font_color_values"
            android:defaultValue="0"
            />

        <ListPreference
            android:key="text_size_preference"
            android:title="@string/title_size_preference"
            android:summary="@string/summary_size_preference"
            android:entries="@array/font_size_entries"
            android:entryValues="@array/font_size_values"
            />
    </PreferenceCategory>
</PreferenceScreen>